# Dataflow

./: Cargo.toml  Readme.md  docker-compose.yaml
src/: iceberg_writer.rs  main.rs  partition_spliter.rs  window.rs  window_process.rs
